--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,7 +7,7 @@
   --orange-red: oklch(63.32% 0.24 31.68);
   --gray-900: oklch(19.37% 0.006 300.98);
   --gray-700: oklch(36.98% 0.014 302.71);
-  --gray-400: oklch(47.106% 0.27434 285.558);
+  --gray-400: oklch(60.902% 0.2495 355.839);
   --red-to-pink-to-purple-vertical-gradient: linear-gradient(
     180deg,
     var(--orange-red) 0%,
@@ -35,9 +35,7 @@ h1 {
   line-height: 100%;
   letter-spacing: -0.125rem;
   margin: 0;
-  font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 p {
   margin: 0;
